package com.zx.uml.dependence;

public class PersonDao {

}
